# LAPACKE_examples

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_DGESV_rowmajor.c
